# morph-da-codec

./: .gitignore  Cargo.toml  Makefile  README.md
bindings/codec/: README.md  go.mod
bindings/codec/zstd/: batch_test.go  compress.go  compress_test.go  decompress_test.go  libmorph_da_zstd_darwin_arm64.go  libmorph_da_zstd_linux_amd64.go
bindings/decoder/: README.md  go.mod
bindings/decoder/zstd/: libmorph_da_zstd_decode_darwin_amd64.go  libmorph_da_zstd_decode_darwin_arm64.go  libmorph_da_zstd_decode_linux_amd64.go  libmorph_da_zstd_decode_linux_arm64.go  zstd.go  zstd_test.go
crates/codec-ffi/: Cargo.toml
crates/codec-ffi/src/: lib.rs
crates/decoder/core/: Cargo.toml
crates/decoder/core/src/: lib.rs
crates/decoder/core/tests/: any.rs  batch.rs
crates/decoder/zstd-ffi/: Cargo.toml
crates/decoder/zstd-ffi/src/: lib.rs
crates/decoder/zstd-guest/: Cargo.toml
crates/decoder/zstd-guest/src/: lib.rs
crates/encoder/core/: Cargo.toml
crates/encoder/core/src/: lib.rs
crates/encoder/zstd-ffi/: Cargo.toml
crates/encoder/zstd-ffi/src/: lib.rs
testdata/batches/batch-53359/: blob-1.hex
testdata/batches/batch-54334/: blob-1.hex  blob-2.hex
testdata/batches/batch-55157/: blob-1.hex
