[workspace]
members = [
    "crates/decoder/core",
    "crates/decoder/zstd-guest",
    "crates/decoder/zstd-ffi",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
morph-da-decoder-core = { path = "crates/decoder/core" }
ruzstd = "0.8.3"
hex = "0.4.3"