[package]
name = "morph-da-decoder-ffi"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
# Plain rlib so it can be aggregated into the single `codec-ffi` staticlib.
# Producing a staticlib here would bundle a second copy of the Rust runtime and
# clash with the encoder's runtime at link time.
crate-type = ["rlib"]

[dependencies]
morph-da-decoder-core.workspace = true
